--- a/src/modules/blackboardgreenboard.kv
+++ b/src/modules/blackboardgreenboard.kv
@@ -1,10 +1,10 @@
 #:kivy 2.0.0
-#:import FadeTransition kivy.uix.screenmanager.FadeTransition
+#:import WipeTransition kivy.uix.screenmanager.WipeTransition
 #:include modules/capture.kv
 #:include modules/gallery.kv
 
 ScreenManager:
     id: screen_manager
-    transition: FadeTransition()
+    transition: WipeTransition()
     GalleryScreen:
     CaptureScreen:
