--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -6,7 +6,7 @@
         orientation: 'vertical'
         Camera:
             id: camera
-            resolution: (self.width, self.height)
+            resolution: (300, 400)
             play: True
             allow_stretch: True
         Button:
