--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -5,4 +5,4 @@
     name: 'capture'
     XCamera:
         id: camera
-        on_picture_taken: app.root.current= 'gallery'
+        on_picture_taken: root.picture_taken()
