--- a/src/modules/blackboardgreenboard.kv
+++ b/src/modules/blackboardgreenboard.kv
@@ -2,8 +2,10 @@
 #:import WipeTransition kivy.uix.screenmanager.WipeTransition
 #:include modules/capture.kv
 #:include modules/gallery.kv
+#:include modules/imageview.kv
 
 ScreenManager:
     id: screen_manager
     GalleryScreen:
+    ImageViewScreen:
     CaptureScreen:
