--- a/src/modules/blackboardgreenboard.kv
+++ b/src/modules/blackboardgreenboard.kv
@@ -1,10 +1,9 @@
 #:kivy 2.0.0
-#:import WipeTransition kivy.uix.screenmanager.WipeTransition
 #:include modules/capture.kv
 #:include modules/gallery.kv
 #:include modules/imageview.kv
 
-ScreenManager:
+CustomScreenManager:
     id: screen_manager
     GalleryScreen:
     ImageViewScreen:
