--- a/src/modules/imageview.kv
+++ b/src/modules/imageview.kv
@@ -7,6 +7,7 @@
         id: image_container
         do_translation: False
         do_rotation: False
-        FitImage:
+        scale_min: 1
+        Image:
             id: bg_image
             source: root.file_name
