--- a/src/modules/gallery.kv
+++ b/src/modules/gallery.kv
@@ -2,6 +2,7 @@
 
 <GalleryScreen>:
     name: 'gallery'
+    md_bg_color: 0, 0, 0, .9
     ScrollView:
         MDGridLayout:
             id: gallery_content
