Add delete functionality

--- a/src/modules/imageview.kv
+++ b/src/modules/imageview.kv
@@ -19,6 +19,7 @@
         padding: [0, 0, 20, 0]
         MDIconButton:
             icon: "delete"
+            on_press: root.delete_photo()
             user_font_size: "32sp"
             theme_text_color: "Custom"
             text_color: 1, 1, 1, 1
