--- a/src/modules/imageview.kv
+++ b/src/modules/imageview.kv
@@ -19,8 +19,7 @@
         padding: [0, 0, 20, 0]
         MDIconButton:
             icon: "delete"
-            on_press: root.delete_photo()
-            user_font_size: "32sp"
+            on_release: root.delete_photo()
             theme_text_color: "Custom"
             text_color: 1, 1, 1, 1
             pos_hint: {"center_x": .5, "center_y": .5}
@@ -30,7 +29,6 @@
         padding: [0, 0, 20, 0]
         MDIconButton:
             icon: "share-variant"
-            user_font_size: "32sp"
             theme_text_color: "Custom"
             text_color: 1, 1, 1, 1
             pos_hint: {"center_x": .5, "center_y": .5}
@@ -40,8 +38,7 @@
         padding: [20, 0, 0, 0]
         MDIconButton:
             icon: "arrow-left"
-            user_font_size: "32sp"
             theme_text_color: "Custom"
             text_color: 1, 1, 1, 1
             pos_hint: {"center_x": .5, "center_y": .5}
-            on_press: app.root.current = 'gallery'
+            on_release: app.root.current = 'gallery'
