--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -3,6 +3,7 @@
 
 <CaptureScreen>:
     name: 'capture'
+    md_bg_color: 0, 0, 0, 1
     XCamera:
         id: camera
         on_picture_taken: root.picture_taken(*args)
