--- a/src/modules/imageview.kv
+++ b/src/modules/imageview.kv
@@ -5,7 +5,7 @@
     file_name: ''
     md_bg_color: 0, 0, 0, 1
     BoxLayout:
-        ScatterLayout:
+        CustomScatterLayout:
             id: image_container
             do_translation: False
             do_rotation: False
