--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -1,5 +1,6 @@
 #:kivy 2.0.0
 #:import xcamera kivy_garden.xcamera.xcamera
+#:import CaptureScreen libs.capturescreen
 
 <CaptureScreen>:
     name: 'capture'
