--- a/src/modules/imageview.kv
+++ b/src/modules/imageview.kv
@@ -1,4 +1,5 @@
 #:kivy 2.0.0
+#:import ImageViewScreen libs.imageviewscreen
 
 <ImageViewScreen>:
     name: 'imageview'
@@ -19,7 +20,7 @@
         padding: [0, 0, 20, 0]
         MDIconButton:
             icon: "delete"
-            on_release: root.delete_photo()
+            on_release: root.on_delete()
             theme_text_color: "Custom"
             text_color: 1, 1, 1, 1
             pos_hint: {"center_x": .5, "center_y": .5}
