--- a/src/modules/imageview.kv
+++ b/src/modules/imageview.kv
@@ -1,5 +1,6 @@
 #:kivy 2.0.0
 #:import ImageViewScreen libs.imageviewscreen
+#:import CustomScatterLayout libs.components.customscatterlayout
 
 <ImageViewScreen>:
     name: 'imageview'
