Remove plyer (not working)

--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -5,6 +5,6 @@
 <CaptureScreen>:
     name: 'capture'
     md_bg_color: 0, 0, 0, 1
-    # XCamera:
-    #     id: camera
-    #     on_picture_taken: root.picture_taken(*args)
+    XCamera:
+        id: camera
+        on_picture_taken: root.picture_taken(*args)
