Add share button

--- a/src/modules/imageview.kv
+++ b/src/modules/imageview.kv
@@ -31,6 +31,7 @@
         padding: [0, 0, 20, 0]
         MDIconButton:
             icon: "share-variant"
+            on_release: root.on_share()
             theme_text_color: "Custom"
             text_color: 1, 1, 1, 1
             pos_hint: {"center_x": .5, "center_y": .5}
@@ -40,7 +41,7 @@
         padding: [20, 0, 0, 0]
         MDIconButton:
             icon: "arrow-left"
+            on_release: root.on_back()
             theme_text_color: "Custom"
             text_color: 1, 1, 1, 1
             pos_hint: {"center_x": .5, "center_y": .5}
-            on_release: app.root.current = 'gallery'
