--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -5,6 +5,18 @@
 <CaptureScreen>:
     name: 'capture'
     md_bg_color: 0, 0, 0, 1
-    XCamera:
+    Camera:
         id: camera
-        on_picture_taken: root.picture_taken(*args)
+        resolution: root.camera_resolution
+        play: True
+
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: [0, 0, 0, 20]
+        MDIconButton:
+            icon: "camera"
+            on_release: root.on_picture_taken()
+            theme_text_color: "Custom"
+            text_color: 1, 1, 1, 1
+            pos_hint: {"center_x": .5, "center_y": .5}
