--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -7,9 +7,9 @@
     md_bg_color: 0, 0, 0, 1
     Camera:
         id: camera
-        resolution: root.camera_resolution
+        allow_stretch: True
+        keep_ratio: False
         play: True
-
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
