--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -5,12 +5,18 @@
 <CaptureScreen>:
     name: 'capture'
     md_bg_color: 0, 0, 0, 1
-    AndroidCamera:
+    Camera:
         id: camera
-        index: 0
-        resolution: self.camera_resolution
         allow_stretch: True
+        keep_ratio: False
         play: True
+        canvas.before:
+            PushMatrix
+            Rotate:
+                angle: -90
+                origin: self.center
+        canvas.after:
+            PopMatrix
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
