--- a/src/modules/capture.kv
+++ b/src/modules/capture.kv
@@ -5,17 +5,13 @@
 <CaptureScreen>:
     name: 'capture'
     md_bg_color: 0, 0, 0, 1
-    Camera:
+    AndroidCamera:
         id: camera
-        resolution: (1920, 1080)
+        index: 0
+        resolution: self.camera_resolution
         allow_stretch: True
-        canvas.before:
-            PushMatrix
-            Rotate:
-                angle: -90
-                origin: self.center
-        canvas.after:
-            PopMatrix
+        keep_ratio: False
+        play: True
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
